--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,15 @@
 name: only_results
 description: A dart implementation of Rusts Result type
-version: 1.0.0
+version: 1.0.1
 repository: https://github.com/MyLittlePenguin/only_results
+
+platforms:
+  android:
+  ios:
+  linux:
+  windows:
+  macos:
+  web:
 
 environment:
   sdk: ^3.0.6
